Fix doc build without --enable-doc-html
This commit fix the bug of the build rules in lib/ and ldms/ when --enable-doc
is set and --enable-doc-html is not set.

NOTE:

default is --disable-doc

If --enable-doc is set, the default is --disable-doc-html and --enable-doc-man.

--- a/ldms/Makefile.am
+++ b/ldms/Makefile.am
@@ -79,20 +79,19 @@ install-doxygen: doxygen-out
 	for f in doxygen/html/search/*; do \
 		$(INSTALL_DATA) $$f $(DESTDIR)$(docdir)$(OPV)/html/search; \
 	done
+
+install-data-local: install-doxygen
+
 endif
 
 if ENABLE_DOC_MAN
 SUBDIRS += man
 endif
 
-else
-# doc is disabled
-install-doxygen:
-	$(MKDIR_P) $(DESTDIR)$(docdir)$(OPV)
-
 endif
 
-install-data-local: install-doxygen
+install-data-local:
+	$(MKDIR_P) $(DESTDIR)$(docdir)$(OPV)
 	for f in AUTHORS README COPYING ChangeLog ; do \
 		$(INSTALL_DATA) ${srcdir}/$$f $(DESTDIR)$(docdir)$(OPV); \
 	done
