--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -39,28 +39,36 @@ rpm7 centos7 rhel7: dist-gzip
 	rpmbuild --define "_topdir `pwd`/rpm7" -ba rpm7/SPECS/ovis-lib-rhel7.spec
 
 if ENABLE_DOC
-all: doc
 install-data-local: install-doc
 endif
 
-# The rules docs and install-docs is not under ENABLE_DOC so that users can
-# manually call 'make docs' and 'make install-docs'. If
-# --enable-docs is given at configure time, 'docs' rule will be invoked when
-# "make" is called and 'install-docs' will be invoked when "make install" is
-# called.
-doc doxygen doxygen/html:
+if ENABLE_DOC_HTML
+DOCDEPS = $(top_srcdir)/src/*/*.c \
+          $(top_srcdir)/src/*/*.h \
+          $(top_srcdir)/src/*/*/*.h \
+          $(top_srcdir)/src/*/*/*.h
+all: doxygen-out
+doxygen-out: $(DOCDEPS)
 	doxygen ./Doxyfile
+	touch doxygen-out
 
-install-doc:
+.PHONY: install-doxygen
+install-doxygen: doxygen-out
 	$(MKDIR_P) $(DESTDIR)$(docdir)$(OPV)/html/search
-	for f in README COPYING ChangeLog COPYING; do \
-		$(INSTALL_DATA) ${srcdir}/$$f $(DESTDIR)$(docdir)$(OPV); \
-	done
 	for f in doxygen/html/* ; do \
 		$(INSTALL_DATA) $$f $(DESTDIR)$(docdir)$(OPV)/html; \
 	done
 	for f in doxygen/html/search/*; do \
 		$(INSTALL_DATA) $$f $(DESTDIR)$(docdir)$(OPV)/html/search; \
+	done
+
+install-doc: install-doxygen
+endif
+
+install-doc:
+	$(MKDIR_P) $(DESTDIR)$(docdir)$(OPV)
+	for f in README COPYING ChangeLog COPYING; do \
+		$(INSTALL_DATA) ${srcdir}/$$f $(DESTDIR)$(docdir)$(OPV); \
 	done
 
 PEDIGREE = $(DESTDIR)/$(bindir)/lib-pedigree
