dist and rpm7 no-swig fix
Fix swig automake and rhel7 RPM packing in lib, ldms and baler to support
the absence of --enable-swig in rpm7.sh.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -7,7 +7,7 @@ if ENABLE_SWIG
 SUBDIRS += swig
 endif
 
-EXTRA_DIST = autogen.sh COPYING doxygen/html
+EXTRA_DIST = autogen.sh COPYING
 
 OVIS_LIB = $(PACKAGE_NAME)-$(PACKAGE_VERSION)
 OVIS_LIB_TARBALL = $(OVIS_LIB).tar.gz
