--- a/lib/swig/zap/Makefile.am
+++ b/lib/swig/zap/Makefile.am
@@ -1,9 +1,12 @@
 # For Swig stuffs
+if ENABLE_SWIG
 BUILT_SOURCES = zap.c zap.py
 SWIG_SOURCES = zap.i $(top_srcdir)/src/zap/zap.h
-pkgpython_PYTHON = zap.py __init__.py
+pkgpython_PYTHON = __init__.py
+nodist_pkgpython_PYTHON = zap.py
 pkgpyexec_LTLIBRARIES = _zap.la
-_zap_la_SOURCES = zap.c $(SWIG_SOURCES)
+_zap_la_SOURCES = $(SWIG_SOURCES)
+nodist__zap_la_SOURCES = zap.c
 _zap_la_CFLAGS = -g $(SWIG_PYTHON_CPPFLAGS) -I$(top_srcdir)/src
 _zap_la_LDFLAGS = -module $(PYTHON_LDFLAGS)
 _zap_la_LIBADD = $(top_builddir)/src/zap/libzap.la
@@ -28,3 +31,4 @@ zap_pth = $(PYTHON_SITE_PKG)/zap.pth
 
 #uninstall-local:
 #	rm -f $(zap_pth)
+endif
