--- a/baler/rpm/rhel7.spec.in
+++ b/baler/rpm/rhel7.spec.in
@@ -40,7 +40,9 @@ rm -rf %{buildroot}
 %files
 %{_bindir}
 %{_libdir}
-%{_prefix}/lib
+%if "@ENABLE_SWIG_TRUE@x" == "x"
+%{_prefix}/lib/python*
+%endif
 %{_prefix}/etc
 
 
