--- a/ldms/swig/Makefile.am
+++ b/ldms/swig/Makefile.am
@@ -5,9 +5,11 @@ CFLAGS := $(filter-out -Werror, ${CFLAGS})
 
 BUILT_SOURCES = ldms.c ldms.py
 SWIG_SOURCES = ldms.i $(top_srcdir)/src/core/ldms.h $(top_srcdir)/src/core/ldms_core.h
-pkgpython_PYTHON = ldms.py __init__.py
+pkgpython_PYTHON = __init__.py
+nodist_pkgpython_PYTHON = ldms.py
 pkgpyexec_LTLIBRARIES = _ldms.la
-_ldms_la_SOURCES = ldms.c $(SWIG_SOURCES)
+_ldms_la_SOURCES = $(SWIG_SOURCES)
+nodist__ldms_la_SOURCES = ldms.c
 _ldms_la_CFLAGS = -g $(SWIG_PYTHON_CPPFLAGS) -I$(top_srcdir)/src/core \
 		 @OVIS_LIB_INCDIR_FLAG@
 _ldms_la_LDFLAGS = @OVIS_LIB_LIBDIR_FLAG@  $(PYTHON_LDFLAGS) -module
