--- a/lib/packaging/ovis-lib-rhel7.spec.in
+++ b/lib/packaging/ovis-lib-rhel7.spec.in
@@ -159,7 +159,9 @@ underlying transports (e.g. socket, rdma (Infiniband or iWarp), and uGNI).
 %files zap
 %defattr(-,root,root)
 %{_libdir}/libzap.*
+%if "@ENABLE_ZAPTEST_TRUE@x" == "x"
 %{_sbindir}/zap_test*
+%endif
 
 # zap-devel
 %package zap-devel
@@ -214,6 +216,7 @@ uGNI transport implementation for zap
 %endif
 
 # python
+%if "@ENABLE_SWIG_TRUE@x" == "x"
 %package python
 Summary: Python interface for OVIS libraries
 Group: %{ovis_lib_grp}
@@ -221,6 +224,7 @@ Group: %{ovis_lib_grp}
 Python interface for OVIS libraries
 %files python
 %{_prefix}/lib/python*/site-packages/ovis_lib/
+%endif
 
 # These are the files that we don't care
 %exclude %{_bindir}/lib-pedigree
