--- a/lib/swig/ovis_auth/Makefile.am
+++ b/lib/swig/ovis_auth/Makefile.am
@@ -1,9 +1,11 @@
 # For Swig stuffs
+if ENABLE_SWIG
 BUILT_SOURCES = auth.c ovis_auth.py
 SWIG_SOURCES = ovis_auth.i $(top_srcdir)/src/ovis_auth/auth.h
-pkgpython_PYTHON = ovis_auth.py
+nodist_pkgpython_PYTHON = ovis_auth.py
 pkgpyexec_LTLIBRARIES = _ovis_auth.la
-_ovis_auth_la_SOURCES = auth.c $(SWIG_SOURCES)
+_ovis_auth_la_SOURCES = $(SWIG_SOURCES)
+nodist__ovis_auth_la_SOURCES = auth.c
 _ovis_auth_la_CFLAGS = -g $(SWIG_PYTHON_CPPFLAGS) -I$(top_srcdir)/src
 _ovis_auth_la_LDFLAGS = -module $(PYTHON_LDFLAGS)
 _ovis_auth_la_LIBADD = $(top_builddir)/src/ovis_auth/libovis_auth.la
@@ -15,3 +17,4 @@ auth.c: $(SWIG_SOURCES)
 
 clean-local:
 	rm -f auth.c ovis_auth.py
+endif
