first pass at ldmsd_controller man page. reinstate the old ldmsctl man page
Conflicts:
	ldms/man/Makefile.am

--- a/ldms/man/Makefile.am
+++ b/ldms/man/Makefile.am
@@ -2,9 +2,8 @@
 dist_man8_MANS=
 ldms_ls.man
 ldmsd.man
-# pending port from v2
-# ldmsctl.man
-
+ldmsd_controller.man
+ldmsctl.man
 
 dist_man7_MANS= \
 Plugin_aries_mmr.man \
