--- a/ldms/man/Makefile.am
+++ b/ldms/man/Makefile.am
@@ -6,6 +6,7 @@ ldmsd_controller.man \
 ldmsctl.man
 
 dist_man7_MANS= \
+ldms_authentication.man \
 Plugin_aries_mmr.man \
 Plugin_cray_system_sampler_variants.man \
 Plugin_kgnilnd.man \
@@ -18,7 +19,6 @@ Plugin_store_derived_csv.man \
 Plugin_vmstat.man
 
 pending_dist_man7_MANS= \
-LDMS_Authentication.man \
 LDMS_QuickStart.man \
 Plugin_lustre2_client.man \
 Plugin_procsensors.man \
