--- a/ldms/src/sampler/aries_mmr/Makefile.am
+++ b/ldms/src/sampler/aries_mmr/Makefile.am
@@ -9,11 +9,29 @@ AM_LDFLAGS = @OVIS_LIB_LIBDIR_FLAG@
 if ENABLE_ARIES_MMR
 # ARIES_LIBGPCD_INCDIR=@ARIES_LIBGPCD_INCDIR@
 # ARIES_LIBGPCD_LIBDIR=@ARIES_LIBGPCD_LIBDIR@
+
 libaries_mmr_la_CFLAGS = $(AM_CFLAGS) -I$(ARIES_LIBGPCD_INCDIR)
 libaries_mmr_la_SOURCES = aries_mmr.c
 libaries_mmr_la_LDFLAGS = $(AM_LDFLAGS) -L@ARIES_LIBGPCD_LIBDIR@ -lgpcd
 libaries_mmr_la_LIBADD = $(CORE)/libldms.la -lovis_util \
                                   @LDFLAGS_GETTIME@ -lcoll
 pkglib_LTLIBRARIES += libaries_mmr.la
+
+libaries_nic_mmr_la_CFLAGS = $(AM_CFLAGS) -I$(ARIES_LIBGPCD_INCDIR)
+libaries_nic_mmr_la_SOURCES = aries_nic_mmr.c
+libaries_nic_mmr_la_LDFLAGS = $(AM_LDFLAGS) -L@ARIES_LIBGPCD_LIBDIR@ -lgpcd
+libaries_nic_mmr_la_LIBADD = $(CORE)/libldms.la -lovis_util \
+                                  @LDFLAGS_GETTIME@ -lcoll
+pkglib_LTLIBRARIES += libaries_nic_mmr.la
+
+
+libaries_rtr_mmr_la_CFLAGS = $(AM_CFLAGS) -I$(ARIES_LIBGPCD_INCDIR)
+libaries_rtr_mmr_la_SOURCES = aries_rtr_mmr.c
+libaries_rtr_mmr_la_LDFLAGS = $(AM_LDFLAGS) -L@ARIES_LIBGPCD_LIBDIR@ -lgpcd
+libaries_rtr_mmr_la_LIBADD = $(CORE)/libldms.la -lovis_util \
+                                  @LDFLAGS_GETTIME@ -lcoll
+pkglib_LTLIBRARIES += libaries_rtr_mmr.la
+
+
 
 endif
