--- a/ldms/src/store/Makefile.am
+++ b/ldms/src/store/Makefile.am
@@ -5,6 +5,13 @@ AM_CFLAGS = -I$(srcdir)/$(CORE) -I$(top_srcdir)  @OVIS_LIB_INCDIR_FLAG@
 STORE_LIBADD = $(CORE)/libldms.la -lcoll -lovis_util @OVIS_LIB_LIB64DIR_FLAG@ \
 	       @OVIS_LIB_LIBDIR_FLAG@
 
+if ENABLE_AMQP
+libstore_amqp_la_SOURCES = store_amqp.c
+libstore_amqp_la_CFLAGS = $(AM_CFLAGS)
+libstore_amqp_la_LIBADD = -lrabbitmq $(STORE_LIBADD)
+pkglib_LTLIBRARIES += libstore_amqp.la
+endif
+
 if ENABLE_SOS
 libstore_sos_la_SOURCES = store_sos.c
 libstore_sos_la_CFLAGS = @SOS_INCDIR_FLAG@ $(AM_CFLAGS)
