--- a/util/aries/mmr_reader/function_store/function_store_mmr.conf
+++ b/util/aries/mmr_reader/function_store/function_store_mmr.conf
@@ -1,6 +1,8 @@
 ##
 ## NODE 0
 ##
+rtr_mmr_0 aries_rtr_id RAWTERM 1 aries_rtr_id 1 1
+#
 rtr_mmr_0 AR_RTR_0_0_INQ_PRF_INCOMING_FLIT_VC_SUM SUM_N 8 AR_RTR_0_0_INQ_PRF_INCOMING_FLIT_VC0,AR_RTR_0_0_INQ_PRF_INCOMING_FLIT_VC1,AR_RTR_0_0_INQ_PRF_INCOMING_FLIT_VC2,AR_RTR_0_0_INQ_PRF_INCOMING_FLIT_VC3,AR_RTR_0_0_INQ_PRF_INCOMING_FLIT_VC4,AR_RTR_0_0_INQ_PRF_INCOMING_FLIT_VC5,AR_RTR_0_0_INQ_PRF_INCOMING_FLIT_VC6,AR_RTR_0_0_INQ_PRF_INCOMING_FLIT_VC7 1 1
 #
 rtr_mmr_0 AR_RTR_0_0_INQ_PRF_INCOMING_PKT_VC_SUM_FILTER_FLIT_SUM_CNT SUM_N 8 AR_RTR_0_0_INQ_PRF_INCOMING_PKT_VC0_FILTER_FLIT0_CNT,AR_RTR_0_0_INQ_PRF_INCOMING_PKT_VC1_FILTER_FLIT1_CNT,AR_RTR_0_0_INQ_PRF_INCOMING_PKT_VC2_FILTER_FLIT2_CNT,AR_RTR_0_0_INQ_PRF_INCOMING_PKT_VC3_FILTER_FLIT3_CNT,AR_RTR_0_0_INQ_PRF_INCOMING_PKT_VC4_FILTER_FLIT4_CNT,AR_RTR_0_0_INQ_PRF_INCOMING_PKT_VC5_FILTER_FLIT5_CNT,AR_RTR_0_0_INQ_PRF_INCOMING_PKT_VC6_FILTER_FLIT6_CNT,AR_RTR_0_0_INQ_PRF_INCOMING_PKT_VC7_FILTER_FLIT7_CNT 1 1
@@ -84,6 +86,8 @@ rtr_mmr_0 AR_RTR_4_1_STALL_FLIT_RATIO DIV_AB 2 AR_RTR_4_1_INQ_PRF_ROWBUS_STALL_C
 ##
 ## NODE 1
 ##
+rtr_mmr_1 aries_rtr_id RAWTERM 1 aries_rtr_id 1 1
+#
 rtr_mmr_1 AR_RTR_0_2_INQ_PRF_INCOMING_FLIT_VC_SUM SUM_N 8 AR_RTR_0_2_INQ_PRF_INCOMING_FLIT_VC0,AR_RTR_0_2_INQ_PRF_INCOMING_FLIT_VC1,AR_RTR_0_2_INQ_PRF_INCOMING_FLIT_VC2,AR_RTR_0_2_INQ_PRF_INCOMING_FLIT_VC3,AR_RTR_0_2_INQ_PRF_INCOMING_FLIT_VC4,AR_RTR_0_2_INQ_PRF_INCOMING_FLIT_VC5,AR_RTR_0_2_INQ_PRF_INCOMING_FLIT_VC6,AR_RTR_0_2_INQ_PRF_INCOMING_FLIT_VC7 1 1
 #
 rtr_mmr_1 AR_RTR_0_2_INQ_PRF_INCOMING_PKT_VC_SUM_FILTER_FLIT_SUM_CNT SUM_N 8 AR_RTR_0_2_INQ_PRF_INCOMING_PKT_VC0_FILTER_FLIT0_CNT,AR_RTR_0_2_INQ_PRF_INCOMING_PKT_VC1_FILTER_FLIT1_CNT,AR_RTR_0_2_INQ_PRF_INCOMING_PKT_VC2_FILTER_FLIT2_CNT,AR_RTR_0_2_INQ_PRF_INCOMING_PKT_VC3_FILTER_FLIT3_CNT,AR_RTR_0_2_INQ_PRF_INCOMING_PKT_VC4_FILTER_FLIT4_CNT,AR_RTR_0_2_INQ_PRF_INCOMING_PKT_VC5_FILTER_FLIT5_CNT,AR_RTR_0_2_INQ_PRF_INCOMING_PKT_VC6_FILTER_FLIT6_CNT,AR_RTR_0_2_INQ_PRF_INCOMING_PKT_VC7_FILTER_FLIT7_CNT 1 1
@@ -167,6 +171,8 @@ rtr_mmr_1 AR_RTR_4_3_STALL_FLIT_RATIO DIV_AB 2 AR_RTR_4_3_INQ_PRF_ROWBUS_STALL_C
 ##
 ## NODE 2
 ##
+rtr_mmr_2 aries_rtr_id RAWTERM 1 aries_rtr_id 1 1
+#
 rtr_mmr_2 AR_RTR_0_4_INQ_PRF_INCOMING_FLIT_VC_SUM SUM_N 8 AR_RTR_0_4_INQ_PRF_INCOMING_FLIT_VC0,AR_RTR_0_4_INQ_PRF_INCOMING_FLIT_VC1,AR_RTR_0_4_INQ_PRF_INCOMING_FLIT_VC2,AR_RTR_0_4_INQ_PRF_INCOMING_FLIT_VC3,AR_RTR_0_4_INQ_PRF_INCOMING_FLIT_VC4,AR_RTR_0_4_INQ_PRF_INCOMING_FLIT_VC5,AR_RTR_0_4_INQ_PRF_INCOMING_FLIT_VC6,AR_RTR_0_4_INQ_PRF_INCOMING_FLIT_VC7 1 1
 #
 rtr_mmr_2 AR_RTR_0_4_INQ_PRF_INCOMING_PKT_VC_SUM_FILTER_FLIT_SUM_CNT SUM_N 8 AR_RTR_0_4_INQ_PRF_INCOMING_PKT_VC0_FILTER_FLIT0_CNT,AR_RTR_0_4_INQ_PRF_INCOMING_PKT_VC1_FILTER_FLIT1_CNT,AR_RTR_0_4_INQ_PRF_INCOMING_PKT_VC2_FILTER_FLIT2_CNT,AR_RTR_0_4_INQ_PRF_INCOMING_PKT_VC3_FILTER_FLIT3_CNT,AR_RTR_0_4_INQ_PRF_INCOMING_PKT_VC4_FILTER_FLIT4_CNT,AR_RTR_0_4_INQ_PRF_INCOMING_PKT_VC5_FILTER_FLIT5_CNT,AR_RTR_0_4_INQ_PRF_INCOMING_PKT_VC6_FILTER_FLIT6_CNT,AR_RTR_0_4_INQ_PRF_INCOMING_PKT_VC7_FILTER_FLIT7_CNT 1 1
@@ -250,6 +256,8 @@ rtr_mmr_2 AR_RTR_4_5_STALL_FLIT_RATIO DIV_AB 2 AR_RTR_4_5_INQ_PRF_ROWBUS_STALL_C
 ##
 ## NODE 3
 ##
+rtr_mmr_3 aries_rtr_id RAWTERM 1 aries_rtr_id 1 1
+#
 rtr_mmr_3 AR_RTR_0_6_INQ_PRF_INCOMING_FLIT_VC_SUM SUM_N 8 AR_RTR_0_6_INQ_PRF_INCOMING_FLIT_VC0,AR_RTR_0_6_INQ_PRF_INCOMING_FLIT_VC1,AR_RTR_0_6_INQ_PRF_INCOMING_FLIT_VC2,AR_RTR_0_6_INQ_PRF_INCOMING_FLIT_VC3,AR_RTR_0_6_INQ_PRF_INCOMING_FLIT_VC4,AR_RTR_0_6_INQ_PRF_INCOMING_FLIT_VC5,AR_RTR_0_6_INQ_PRF_INCOMING_FLIT_VC6,AR_RTR_0_6_INQ_PRF_INCOMING_FLIT_VC7 1 1
 #
 rtr_mmr_3 AR_RTR_0_6_INQ_PRF_INCOMING_PKT_VC_SUM_FILTER_FLIT_SUM_CNT SUM_N 8 AR_RTR_0_6_INQ_PRF_INCOMING_PKT_VC0_FILTER_FLIT0_CNT,AR_RTR_0_6_INQ_PRF_INCOMING_PKT_VC1_FILTER_FLIT1_CNT,AR_RTR_0_6_INQ_PRF_INCOMING_PKT_VC2_FILTER_FLIT2_CNT,AR_RTR_0_6_INQ_PRF_INCOMING_PKT_VC3_FILTER_FLIT3_CNT,AR_RTR_0_6_INQ_PRF_INCOMING_PKT_VC4_FILTER_FLIT4_CNT,AR_RTR_0_6_INQ_PRF_INCOMING_PKT_VC5_FILTER_FLIT5_CNT,AR_RTR_0_6_INQ_PRF_INCOMING_PKT_VC6_FILTER_FLIT6_CNT,AR_RTR_0_6_INQ_PRF_INCOMING_PKT_VC7_FILTER_FLIT7_CNT 1 1
@@ -333,6 +341,8 @@ rtr_mmr_3 AR_RTR_4_7_STALL_FLIT_RATIO DIV_AB 2 AR_RTR_4_7_INQ_PRF_ROWBUS_STALL_C
 ##
 ## NIC
 ##
+nic_mmr aries_rtr_id RAWTERM 1 aries_rtr_id 1 1
+#
 nic_mmr AR_NIC_RSPMON_PARB_EVENT_CNTR_AMO_FLITS_DELTA DELTA 1 AR_NIC_RSPMON_PARB_EVENT_CNTR_AMO_FLITS 1 0
 nic_mmr AR_NIC_RSPMON_PARB_EVENT_CNTR_AMO_PKTS_DELTA DELTA 1 AR_NIC_RSPMON_PARB_EVENT_CNTR_AMO_PKTS 1 0
 nic_mmr AR_NIC_RSPMON_PARB_EVENT_CNTR_AMO_FLITS_PKTS_RATIO DIV_AB 2 AR_NIC_RSPMON_PARB_EVENT_CNTR_AMO_FLITS_DELTA,AR_NIC_RSPMON_PARB_EVENT_CNTR_AMO_PKTS_DELTA 1 1
