--- a/lib/packaging/ovis-lib-rhel7.spec.in
+++ b/lib/packaging/ovis-lib-rhel7.spec.in
@@ -226,10 +226,6 @@ Python interface for OVIS libraries
 %{_prefix}/lib*/python*/site-packages/ovis_lib/
 %endif
 
-# These are the files that we don't care
-%exclude %{_bindir}/lib-pedigree
-%exclude %{_includedir}/ovis-test/
-
 %if "@ENABLE_DOC_TRUE@x" == "x"
 # ovis-lib-doc package
 %package doc
@@ -251,5 +247,9 @@ Miscellaneous file in ovis-lib project.
 %files misc
 %{_libdir}/ovis-lib-configvars.sh
 %{_includedir}/ovis-lib-config.h
+%{_bindir}/lib-pedigree
+
+# These are the files that we don't care
+%exclude %{_includedir}/ovis-test/
 
 %changelog
