lib: etc - uninstall wrong path fix
Fix a wrong uninstallation path in lib/etc/ld.so.conf.d

--- a/lib/etc/ld.so.conf.d/Makefile.am
+++ b/lib/etc/ld.so.conf.d/Makefile.am
@@ -3,4 +3,4 @@ install-data-local:
 	$(INSTALL_DATA) $(builddir)/ovis-ld-so.conf $(DESTDIR)/$(sysconfdir)/ld.so.conf.d/
 
 uninstall-local:
-	rm -f $(DESTDIR)/$(sysconfdir)/ovis-ld-so.conf
+	rm -f $(DESTDIR)/$(sysconfdir)/ld.so.conf.d/ovis-ld-so.conf
