baler: change etc/ installation path
Change etc/ installation path, from forcing /etc to ${sysconfdir}.

--- a/baler/etc/logrotate.d/Makefile.am
+++ b/baler/etc/logrotate.d/Makefile.am
@@ -1,6 +1,6 @@
 install-data-local:
-	$(MKDIR_P) $(DESTDIR)/etc/ovis/logrotate.d
-	$(INSTALL_DATA) $(srcdir)/balerd $(DESTDIR)/etc/ovis/logrotate.d/
+	$(MKDIR_P) $(DESTDIR)/$(sysconfdir)/ovis/logrotate.d
+	$(INSTALL_DATA) $(srcdir)/balerd $(DESTDIR)/$(sysconfdir)/ovis/logrotate.d/
 
 uninstall-local:
 	rm -f $(DESTDIR)/etc/ovis/logrotate.d/balerd
