knc_sampler and copy (multiple mics). this is what is running on compton. derived version has been tested, but is not running. this also required some top level autogen changes that are not being checkedin here.

--- a/ldms/man/Makefile.am
+++ b/ldms/man/Makefile.am
@@ -12,6 +12,7 @@ ldms_quickstart.man \
 Plugin_aries_mmr.man \
 Plugin_cray_system_sampler_variants.man \
 Plugin_kgnilnd.man \
+Plugin_knc_sampler.man \
 Plugin_meminfo.man \
 Plugin_procinterrupts.man \
 Plugin_procnetdev.man \
