--- a/ldms/etc/logrotate.d/Makefile.am
+++ b/ldms/etc/logrotate.d/Makefile.am
@@ -1,3 +1,5 @@
+EXTRA_DIST = ldmsd_aggregator ldmsd_sampler
+
 install-data-local:
 	$(MKDIR_P) $(DESTDIR)/$(sysconfdir)/ovis/logrotate.d/
 	$(INSTALL_DATA) $(srcdir)/ldmsd_aggregator $(DESTDIR)/$(sysconfdir)/ovis/logrotate.d/
