rabbit store rebased
Build/configuration example: packaging make-all-rabbit.sh
Run example rabbit: start rabbitmq with util/lanl.sh (or equivalent)
Run ldms: run prefix/bin/ldms_local_amqptest.sh
If you don't have an easy rabbit client, try tcpdump or wireshark to inspect
traffic on interface lo.
Documentation: see man page Plugin_store_rabbitv3.man

Ancillary bits of significance for easier writing of samplers and stores:
coll/label-set, coll/ovis-map, open-source hashing and encoding functions
in third/*.

related fixes:
* missing inits of related policy metric members.
* missing [] on some m4 calls.
* better error message on socket open fail.

--- a/configure.ac
+++ b/configure.ac
@@ -9,7 +9,7 @@ AX_PREFIX_CONFIG_H_G(ovis-all-config.h)
 AC_CONFIG_SUBDIRS([lib])
 AC_PROG_CC
 AM_INIT_AUTOMAKE([foreign])
-m4_ifdef(AM_SILENT_RULES, [AM_SILENT_RULES([yes])])
+m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 AM_CONFIG_HEADER(config.h)
 AM_PROG_LIBTOOL
 AC_LIB_RPATH
