--- a/ldms/src/ldmsd/Makefile.am
+++ b/ldms/src/ldmsd/Makefile.am
@@ -12,21 +12,22 @@ AM_LDFLAGS = @OVIS_LIB_LIB64DIR_FLAG@ @OVIS_LIB_LIBDIR_FLAG@
 AM_CPPFLAGS = -DPLUGINDIR='"$(pkglibdir)"'
 
 ldms_ls_SOURCES = ldms_ls.c
-ldms_ls_LDFLAGS = $(AM_LDFLAGS) \
-	@LIBEVENT_LIB64DIR_FLAG@ @LIBEVENT_LIBDIR_FLAG@
-ldms_ls_LDADD = $(CORE)/libldms.la @LDFLAGS_GETTIME@ \
-	-lovis_util -lzap -lmmalloc -lcoll \
-	-levent -levent_pthreads -lpthread
 ldms_ls_CFLAGS = $(AM_CFLAGS) @LIBEVENT_INCDIR_FLAG@
+ldms_ls_LDADD = $(CORE)/libldms.la 
+ldms_ls_LDFLAGS = $(AM_LDFLAGS) \
+	@LIBEVENT_LIB64DIR_FLAG@ @LIBEVENT_LIBDIR_FLAG@ \
+	-lzap -lmmalloc -lovis_util -lovis_auth -lcoll -lovis_third \
+	-levent -levent_pthreads -lpthread \
+	@LDFLAGS_GETTIME@
 
 ldmsd_SOURCES = ldmsd.c ldmsd_store.c ldmsd_config.c \
 	ldmsd_cfgobj.c ldmsd_prdcr.c ldmsd_updtr.c ldmsd_strgp.c
+ldmsd_CFLAGS = $(AM_CFLAGS) @LIBEVENT_INCDIR_FLAG@ 
 ldmsd_LDADD = $(CORE)/libldms.la
 ldmsd_LDFLAGS = $(AM_LDFLAGS) \
 	@LIBEVENT_LIB64DIR_FLAG@ @LIBEVENT_LIBDIR_FLAG@ \
-	-lzap -lmmalloc -lovis_util -lcoll \
+	-lzap -lmmalloc -lovis_util -lcoll -lovis_third \
 	-levent -levent_pthreads -lpthread
-ldmsd_CFLAGS = $(AM_CFLAGS) @LIBEVENT_INCDIR_FLAG@ 
 
 if ENABLE_OCM
 ldmsd_SOURCES += ldmsd_ocm.c
@@ -34,14 +35,19 @@ ldmsd_LDFLAGS += @OCM_LIBDIR_FLAG@ -locm
 ldmsd_CFLAGS += @OCM_INCDIR_FLAG@
 endif
 
-ldmsd_LDFLAGS += -lovis_util -lcoll -ldl -lovis_ctrl
+ldmsd_LDFLAGS += -lovis_util -lcoll -lovis_third -ldl -lovis_ctrl
+
+if ENABLE_RABBITV3
+ldmsd_LDFLAGS += -lrabbitmq
+ldmsd_CFLAGS += -DENABLE_RABBITMQ
+endif
 
 ldmsd_LDFLAGS += @OVIS_AUTH_LIBS@
 ldms_ls_LDADD += @OVIS_AUTH_LIBS@
 
 ldmsctl_SOURCES = ldmsctl.c
-ldmsctl_LDADD = $(CORE)/libldms.la
-ldmsctl_LDFLAGS = $(AM_LDFLAGS) @LDFLAGS_READLINE@ -lovis_ctrl -lovis_util -lmmalloc -lcoll -lzap  @LDFLAGS_GETTIME@
+ldmsctl_LDADD = $(CORE)/libldms.la @OVIS_AUTH_LIBS@
+ldmsctl_LDFLAGS = $(AM_LDFLAGS) @LDFLAGS_READLINE@ -lovis_ctrl -lovis_util -lmmalloc -lcoll -lovis_third -lzap  @LDFLAGS_GETTIME@ 
 
 if ENABLE_LDMSD_RCTL
 ldmsd_SOURCES += ldmsd_config_rctrl.c
