fixed silentrules call for 2.63 ac/sles11.

--- a/configure.ac
+++ b/configure.ac
@@ -8,9 +8,8 @@ AC_CONFIG_AUX_DIR(config)
 AX_PREFIX_CONFIG_H_G(ovis-all-config.h)
 AC_CONFIG_SUBDIRS([lib])
 AC_PROG_CC
-AM_INIT_AUTOMAKE([foreign -Wno-portability ]m4_ifndef([AM_SILENT_RULES],[],[silent-rules])[])
-m4_ifndef([AM_SILENT_RULES], [m4_define([AM_SILENT_RULES],[])])
-AM_SILENT_RULES([yes])
+AM_INIT_AUTOMAKE([foreign])
+m4_ifdef(AM_SILENT_RULES, [AM_SILENT_RULES([yes])])
 AM_CONFIG_HEADER(config.h)
 AM_PROG_LIBTOOL
 AC_LIB_RPATH
